<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiS Boards</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Dis Social</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="drowned_in_sound_logo">Drowned in sound logo</string>
    <string name="please_enter_both_username_and_password">Please enter a username and password</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed</string>
    <string name="refresh_text">Refresh</string>
    <string name="reply_text">Reply</string>
    <string name="this_text">^ This</string>
    <string name="connection_error_text">Cannot connect to Drowned in Sound. Check your internet
        connection
    </string>
    <string name="sticky_text">Sticky</string>
    <string name="subject">A really interesting subject</string>
    <string name="lurk">Lurk</string>
    <string name="go_to_latest_comment">Latest comment?</string>
    <string name="go">Go!</string>
    <string name="content">Witty comments</string>
    <string name="new_post">New Post</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="title_activity_start">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="account">Your profile</string>
    <string name="not_logged_in">You need to log in to use this feature</string>
    <string name="new_post_title">New %s post</string>
    <string name="post_reply_title">In reply to %s</string>
    <string name="please_enter_a_reply">Please enter a reply</string>
    <string name="please_enter_a_subject">Please enter a subject</string>
    <string name="please_enter_some_content">Please enter some content</string>
    <string name="please_enter_both_some_content_and_subject">Please enter both a comment and subject</string>
    <string name="cannot_use_this_feature_now">Cannot use this feature now</string>

</resources>