<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_colour"
    android:minHeight="@dimen/reply_dialog_min_height"
    android:minWidth="@dimen/reply_dialog_min_width"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium" >

        <com.drownedinsound.ui.controls.RobotoLightTextView
            android:id="@+id/new_board_post_heading"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/font_colour_light"
            android:paddingLeft="8dp"
            android:textSize="18sp"
            android:text="@string/new_post" />
        <ImageButton
                android:id="@+id/new_board_post_abandon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_black_24dp"/>
        <ImageButton
            android:id="@+id/new_board_post_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_send_black_24dp"/>

    </LinearLayout>


    <EditText
        android:id="@+id/new_board_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:background="@drawable/comment_background_normal"
        android:hint="@string/subject"
        android:padding="10dip"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/new_board_post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:background="@drawable/comment_background_normal"
        android:hint="@string/content"
        android:lines="@integer/reply_dialog_min_lines"
        android:padding="10dip"
        android:gravity="top"
        android:scrollbars="vertical"/>

</LinearLayout>